# Stupid

./: Cargo.toml  README.md
crates/_main/: Cargo.toml
crates/_main/src/: main.rs
crates/abstract-asm/: Cargo.toml
crates/abstract-asm/src/: compiler.rs  display.rs  expression_compiler.rs  function_compiler.rs  intermediary_language.rs  lib.rs
crates/evaluator/: Cargo.toml
crates/evaluator/src/: call_context.rs  emulator.rs  evaluator.rs  lib.rs  simplifier.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/parser/: Cargo.toml
crates/parser/src/: display.rs  lexer.rs  lib.rs  syntax.rs
crates/type-analysis/: Cargo.toml
crates/type-analysis/src/: display.rs  lib.rs  program.rs  types.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
samples/: simple.st  simpler.st
src/: main.rs
src/parser/: display.rs  lexer.rs  mod.rs  syntax.rs
src/type_analysis/: display.rs  mod.rs  program.rs  types.rs
src/util/: mod.rs
