[package]
name = "stupid"
version = "0.1.0"
edition = "2021"
default-run = "stupid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
lexgen = { version = "0.10.0" }
lexgen_util = { version = "0.10.0" }
parsegen = { version = "0.1.1" }
strum = { version = "0.24" }
strum_macros = {version = "0.24" }