[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
parser = { path = "../parser" }
type-analysis = { path = "../type-analysis" }
abstract-asm = { path = "../abstract-asm" }